- setting the text cursor with the mouse and selecting text with the mouse is faster for long textes now
- started implementing style templates
- the number of pages is calculated correctly now

Reggie, 15.11.1998:
-------------------
- More work on style templates

Reggie, 16.11.1998:
-------------------
- More work on the stylist (style editor, style manager, ...)

Reggie, 18.11.1998:
-------------------
- Added tab to the paragraph layout dialog for configuration of paragraph borders
- Use this border config tab in the stylist too

Reggie, 19.11.1998:
-------------------
- Started adding tab to the paragraph layout dialog for configuration of numbering (different list types and chapter numbering)
- Use this tab in stylist too
- Started implementing of internal stuff for using style templates in the documents

Reggie, 20.11.1998:
-------------------
- More work on numbering (internal stuff and configuration dialog)

Reggie, 21.11.1998:
-------------------
- Worked a lot on numbering - it starts really working now :-)

Reggie, 22.11.1998:
-------------------
- Applying style templates works (this means chapter numbering, all types of lists, etc. is possible now :-)
- Modifying style templates in the stylist works - but the text doesn't get updated at the moment (this will come)
  The style template stuff starts working now - there are still lots of bugs and problems in it on which I will
  work tomorrow.

Reggie, 23.11.1998:
-------------------
- Fixed some code which produced memory leaks
- The following style template (parag layout) can be defined
- Applying/Updating style templates much works better now (but I have still to do some stuff here)
- More internal work (esp. fixes) with style templates

Reggie, 24.11.1998:
-------------------
- More work on updating/applying style templates. It works quite well now.
- Some fixes in calculation of the chapter numbers, lists, etc.
- Enumerated lists and Bullet lists can be easily used using the toolbar now.